--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -45,7 +45,7 @@
 }
 
 .nav-links:hover {
-  background-color: #1888ff;
+  color: #1888ff;
   border-radius: 4px;
   transition: all 0.2s ease-out;
 }
@@ -96,6 +96,7 @@
 
   .nav-links:hover {
     background-color: #1888ff;
+    color: #fff;
     border-radius: 0;
   }
 
