--- a/src/components/ExchangeTable.css
+++ b/src/components/ExchangeTable.css
@@ -1,6 +1,11 @@
 #trust-score-good {
   color: green;
 }
+
 #trust-score-bad {
   color: #4a1310;
+}
+
+.coinList tr {
+  border-color: var(--neutral);
 }
