--- a/src/components/CoinDetail.css
+++ b/src/components/CoinDetail.css
@@ -184,6 +184,7 @@
     display: flex;
     padding: 1em;
     background-color: var(--dark);
+    border-radius: 30px;
   }
   .coin-market-container .container1 {
     width: 50%;
