--- a/src/components/CoinDetail.css
+++ b/src/components/CoinDetail.css
@@ -11,17 +11,9 @@
 
     padding-top: 1.2em;
     padding-bottom: 1.2em;
+    padding-left: 1.5em;
   }
-  .coin-detail-container .link {
-    padding-top: 1em;
-    padding-left: 0.7em;
-  }
-  .coin-detail-container .link a {
-    color: var(--bright);
-  }
-  .coin-detail-container .link a:hover {
-    color: var(--highlight);
-  }
+
   .coin-icon-container .coin-icon-image {
     padding-left: 0.5em;
   }
@@ -39,7 +31,7 @@
     padding-top: 0.4em;
   }
   .coin-icon-container .coin-icon-image img {
-    width: 2.2em;
+    width: 2em;
   }
   .coin-market {
     padding: 1em;
@@ -50,28 +42,49 @@
   }
   .coin-market-container {
     font-size: 16px;
-    display: flex;
     padding: 1em;
+
+    display: flex;
+    flex-wrap: wrap;
     background-color: var(--dark);
+    border-radius: 30pt;
+    justify-content: center;
   }
-  .coin-market-container .container1 {
-    width: 50%;
+
+  .coin-market-container .price {
+    padding: 1em;
+    margin: 0.4em;
+
+    border-radius: 15pt;
+    text-align: center;
+    border-bottom: var(--bright) solid 1pt;
   }
-  .coin-market-container .container1 .price {
-    padding: 0.6em;
+  .coin-market-container .market-cap {
+    padding: 1em;
+
+    margin: 0.4em;
+    border-radius: 15pt;
+    text-align: center;
+    border-bottom: var(--bright) solid 1pt;
   }
-  .coin-market-container .container2 .market-cap {
-    padding: 0.6em;
+  .coin-market-container .h-change {
+    padding: 1em;
+
+    margin: 0.4em;
+    border-radius: 15pt;
+    text-align: center;
+    border-bottom: var(--bright) solid 1pt;
   }
-  .coin-market-container .container1 .h-change {
-    padding: 0.6em;
+  .coin-market-container .volume {
+    padding: 1em;
+
+    margin: 0.4em;
+
+    text-align: center;
+    border-radius: 15pt;
+    border-bottom: var(--bright) solid 1pt;
   }
-  .coin-market-container .container2 .volume {
-    padding: 0.6em;
-  }
-  .coin-market-container .container2 {
-    width: 50%;
-  }
+
   .coin-market-container .value {
     font-weight: 800;
     font-size: 1.5em;
@@ -81,7 +94,7 @@
   }
 
   .coin-key-metrics .metrics-title {
-    border-bottom: var(--bright) solid 1pt;
+    /* border-bottom: var(--bright) solid 1pt; */
     padding-bottom: 0.8em;
     padding-top: 0.6em;
     font-weight: 700;
@@ -89,21 +102,81 @@
   }
   .coin-key-metrics .metrics-container {
     background: var(--dark);
+    border-radius: 15pt;
   }
   .coin-key-metrics .metrics-container table {
     border-collapse: collapse;
     width: 100%;
   }
-  .coin-key-metrics .metrics-container table td {
-    border-bottom: var(--bright) solid 1pt;
-    padding-top: 1.4em;
-    padding-bottom: 1.4em;
-    padding-left: 0.4em;
+
+  .coin-key-metrics .metrics-container {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
   }
-  .coin-key-metrics .metrics-container table td .value {
+  .coin-key-metrics .metrics-container .value {
     font-weight: 800;
     font-size: 1.5em;
   }
+  .coin-key-metrics .metrics-container .h-high {
+    background-color: var(--dark);
+    padding: 1.3em;
+    margin: 1.3em;
+    border-radius: 10pt;
+    align-content: center;
+    text-align: center;
+    border-bottom: var(--bright) solid 1pt;
+  }
+  .coin-key-metrics .metrics-container .h-low {
+    padding: 1.3em;
+    background-color: var(--dark);
+    margin: 1.3em;
+    border-radius: 10pt;
+    border-bottom: var(--bright) solid 1pt;
+    align-content: center;
+  }
+  .coin-key-metrics .metrics-container .net-change {
+    padding: 1.3em;
+    background-color: var(--dark);
+    margin: 1.3em;
+    border-radius: 10pt;
+    border-bottom: var(--bright) solid 1pt;
+    align-content: center;
+  }
+  .coin-key-metrics .metrics-container .ath {
+    padding: 1.3em;
+    background-color: var(--dark);
+    margin: 1.3em;
+    border-radius: 10pt;
+    border-bottom: var(--bright) solid 1pt;
+    align-content: center;
+  }
+  .coin-key-metrics .metrics-container .atl {
+    padding: 1.3em;
+    background-color: var(--dark);
+    margin: 1.3em;
+    border-radius: 10pt;
+    border-bottom: var(--bright) solid 1pt;
+    align-content: center;
+  }
+  .coin-key-metrics .metrics-container .return {
+    padding: 1.3em;
+    background-color: var(--dark);
+    margin: 1.3em;
+    border-radius: 10pt;
+    border-bottom: var(--bright) solid 1pt;
+    align-content: center;
+  }
+  .coin-key-metrics .metrics-container .supply {
+    padding: 1.3em;
+    background-color: var(--dark);
+    margin: 1.3em;
+    border-bottom: var(--bright) solid 1pt;
+    border-radius: 10pt;
+    align-content: center;
+  }
+
   .coin-description-container {
     padding: 1em;
   }
@@ -114,12 +187,12 @@
     font-size: 1.3em;
   }
   .coin-description-container .content {
-    padding-top: 0.7em;
+    padding: 0.3em;
     font-size: 1.2em;
     background: var(--dark);
   }
   .candlestick {
-    padding: 1em;
+    padding: 0.4em;
   }
 }
 
@@ -130,7 +203,7 @@
   }
   .coin-detail-container {
     font-size: 16px;
-    width: 55%;
+    width: 80%;
     align-items: center;
   }
   .coin-icon-container {
@@ -142,17 +215,9 @@
 
     padding-top: 1.2em;
     padding-bottom: 1.2em;
+    padding-left: 1.6em;
   }
-  .coin-detail-container .link {
-    padding-top: 1em;
-    padding-left: 0.7em;
-  }
-  .coin-detail-container .link a {
-    color: var(--bright);
-  }
-  .coin-detail-container .link a:hover {
-    color: var(--highlight);
-  }
+
   .coin-icon-container .coin-icon-image {
     padding-left: 0.5em;
   }
@@ -170,7 +235,7 @@
     padding-top: 0.4em;
   }
   .coin-icon-container .coin-icon-image img {
-    width: 2.2em;
+    width: 3em;
   }
   .coin-market {
     padding: 1em;
@@ -183,23 +248,38 @@
     font-size: 16px;
     display: flex;
     padding: 1em;
+    align-content: center;
+    width: 100%;
+    flex-wrap: wrap;
+  }
+
+  .coin-market-container .price {
+    padding: 1.3em;
     background-color: var(--dark);
-    border-radius: 30px;
+    margin: 1em;
+    border-radius: 10pt;
+    align-content: center;
   }
-  .coin-market-container .container1 {
-    width: 50%;
+  .coin-market-container .market-cap {
+    padding: 1.3em;
+    background-color: var(--dark);
+    margin: 1em;
+    border-radius: 10pt;
+    align-content: center;
   }
-  .coin-market-container .container1 .price {
-    padding: 0.6em;
+  .coin-market-container .h-change {
+    padding: 1.3em;
+    background-color: var(--dark);
+    margin: 1em;
+    border-radius: 10pt;
+    align-content: center;
   }
-  .coin-market-container .container2 .market-cap {
-    padding: 0.6em;
-  }
-  .coin-market-container .container1 .h-change {
-    padding: 0.6em;
-  }
-  .coin-market-container .container2 .volume {
-    padding: 0.6em;
+  .coin-market-container .volume {
+    padding: 1.3em;
+    background-color: var(--dark);
+    margin: 1em;
+    border-radius: 10pt;
+    align-content: center;
   }
   .coin-market-container .container2 {
     width: 50%;
@@ -210,6 +290,7 @@
   }
   .coin-key-metrics {
     padding: 1em;
+    width: fit-content;
   }
 
   .coin-key-metrics .metrics-title {
@@ -220,21 +301,68 @@
     font-size: 1.3em;
   }
   .coin-key-metrics .metrics-container {
-    background: var(--dark);
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+    text-align: center;
   }
-  .coin-key-metrics .metrics-container table {
-    border-collapse: collapse;
-    width: 100%;
-  }
-  .coin-key-metrics .metrics-container table td {
-    border-bottom: var(--bright) solid 1pt;
-    padding-top: 1.4em;
-    padding-bottom: 1.4em;
-    padding-left: 0.7em;
-  }
-  .coin-key-metrics .metrics-container table td .value {
+  .coin-key-metrics .metrics-container .value {
     font-weight: 800;
     font-size: 1.5em;
+  }
+  .coin-key-metrics .metrics-container .h-high {
+    background-color: var(--dark);
+    padding: 1.3em;
+    margin: 1.3em;
+    border-radius: 10pt;
+    align-content: center;
+    display: block;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+  }
+  .coin-key-metrics .metrics-container .h-low {
+    padding: 1.3em;
+    background-color: var(--dark);
+    margin: 1.3em;
+    border-radius: 10pt;
+    align-content: center;
+  }
+  .coin-key-metrics .metrics-container .net-change {
+    padding: 1.3em;
+    background-color: var(--dark);
+    margin: 1.3em;
+    border-radius: 10pt;
+    align-content: center;
+  }
+  .coin-key-metrics .metrics-container .ath {
+    padding: 1.3em;
+    background-color: var(--dark);
+    margin: 1.3em;
+    border-radius: 10pt;
+    align-content: center;
+  }
+  .coin-key-metrics .metrics-container .atl {
+    padding: 1.3em;
+    background-color: var(--dark);
+    margin: 1.3em;
+    border-radius: 10pt;
+    align-content: center;
+  }
+  .coin-key-metrics .metrics-container .return {
+    padding: 1.3em;
+    background-color: var(--dark);
+    margin: 1.3em;
+    border-radius: 10pt;
+    align-content: center;
+  }
+  .coin-key-metrics .metrics-container .supply {
+    padding: 1.3em;
+    background-color: var(--dark);
+    margin: 1.3em;
+    border-radius: 10pt;
+    align-content: center;
   }
   .coin-description-container {
     padding: 1em;
