Reworked coins page Trending and CoinList components to handle mobile better.

--- a/src/components/CoinList.css
+++ b/src/components/CoinList.css
@@ -1,6 +1,7 @@
 .coinList {
   background: var(--dark);
   border-radius: 10px;
+  word-break: break-all;
 }
 
 .coinList th {
@@ -21,4 +22,9 @@
 
 .coinList .symbol {
   font-weight: bold;
+}
+
+.coinList a {
+  color: var(--brighter);
+  text-decoration: none;
 }
