--- a/src/components/ExchangeList.css
+++ b/src/components/ExchangeList.css
@@ -18,15 +18,17 @@
 }
 
 .exchangeList th {
+  border-bottom: 1px solid var(--neutral);
   color: var(--bright);
 }
 
 .exchangeList td {
+  border: none;
   color: var(--brighter);
 }
 
-.exchangeList tr {
-  border-color: var(--neutral);
+.exchangeList tr + tr {
+  border-top: 1px solid var(--neutral);
 }
 
 .exchangeList tr:hover {
